[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/tree/tree.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/game_scripts/Tree.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/tree/damage/damage.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/sfx/tree/break/break.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 48.8599

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.713726, 0.141176, 1 )

[node name="Tree" type="StaticBody2D" groups=["Attackable"]]
light_mask = 0
z_index = 2
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -80.0
margin_right = 53.0
margin_bottom = -64.0
rect_min_size = Vector2( 106, 16 )
custom_styles/fg = SubResource( 2 )
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarShowTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 1000.0
attenuation = 2.0
bus = "SFX"
area_mask = 0

[node name="BreakSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
max_distance = 1000.0
attenuation = 2.0
bus = "SFX"
area_mask = 0

[connection signal="timeout" from="HealthBarShowTimer" to="." method="_on_HealthBarShowTimer_timeout"]
[connection signal="finished" from="BreakSFX" to="." method="_on_BreakSFX_finished"]
